FEATBL-1873 feat: kill bm-sds-proxy (Mailshares not supported yet, CyrusDataStore not supported yet)